Moved work experience above projects. Added FSWD to job experience. Fixed topnav scrolling to not hide items behind. Changed Resume. Changed Skills to Experience in topnav. Added nocrawl meta to index.

--- a/vite-project/src/assets/Home.css
+++ b/vite-project/src/assets/Home.css
@@ -174,6 +174,16 @@ body, html {
     text-align: right;
 }
 
+.experience-list-item {
+    list-style: disc;
+    list-style-position: inside;
+    color: inherit;
+}
+
+.experience-list-item::marker {
+    color: #046A38;
+}
+
 .section-text {
     font-size: 1rem;
     line-height: 1.6;
