--- a/vite-project/src/assets/TopNav.css
+++ b/vite-project/src/assets/TopNav.css
@@ -1,3 +1,7 @@
+:root {
+  --navbar-height: 80px;
+}
+
 .navbar {
   background: transparent;
   padding: 0.3rem 1rem;
@@ -128,6 +132,14 @@
 .lets-connect {
   width: 30px;
   height: 30px;
+}
+
+#intro,
+#about,
+#experience,
+#projects,
+#resume {
+  scroll-margin-top: var(--navbar-height);
 }
 
 @media screen and (max-width: 991px) {
